<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acabias.digoreste.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/digoreste"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="33dp"
        android:layout_marginRight="14dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:contentDescription="@string/logodigoreste" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="111dp"
        android:layout_height="54dp"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/logocnpq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/cnpq"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_editor_absoluteY="588dp" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="47dp"
        android:layout_height="66dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ufmt"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.498"
        android:contentDescription="@string/logoufmt" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="76dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pgfa"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:contentDescription="@string/logopgfa" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/apoio"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
